--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Chat</string>
+    <string name="uemail">Enter your Email</string>
+    <string name="upass">Enter the password</string>
 </resources>
